make the River menuitem toggle the river view open and closed; fix the Wide Message layout problem (chrome gets messed up in Wide Message mode, particularly when using extensions like Sidebar Tabs)

--- a/content/browser.css
+++ b/content/browser.css
@@ -61,3 +61,11 @@
 #palette-box toolbarbutton.snowlToolbarMenuButton {
   -moz-box-orient: vertical;
 }
+
+tab[snowl] {
+  background: white;
+}
+
+tab[snowl] > image {
+  list-style-image: url("chrome://snowl/content/icons/snowl-16.png");
+}
